tdf#120713 correctly handle boolean values in filters

This commit has two parts:
 - Hardcode the correct BooleanComparisonMode in the firebird-sdbc driver
   (this fixes on Firebird databases, among others, the AutoFilter for bools)
 - Generic to all DBMS, have the "form-based filter" obey the BooleanComparisonMode

Change-Id: Ib14e6c3d5cb773ae1f972840f8b53062f0224396